--- a/WorkShop/React/task-app/src/App.css
+++ b/WorkShop/React/task-app/src/App.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 /* FORM CSS - START */
@@ -77,6 +78,7 @@
     width: 33%;
     padding: 5px;
     /* border: 1px solid red; */
+    background-color: black;
 }
 .task-card{
     display: flex;
@@ -86,22 +88,31 @@
     padding: 10px;
     border: 1px solid silver;
     border-radius: 10px;
+    background-color: black;
 }
 .card-group{
     width: 100%;
     padding: 10px;
     /* text-align: center; */
     border-bottom: 1px solid silver;
+    background-color: black;
+    color: white;
 }
 .card-title{
     margin: 5px 0;
+    background-color: black;
+    color: white;
 }
 .card-text{
     margin: 5px 0;
+    background-color: black;
+    color: white;
 }
 .button-group{
     text-align: center;
     width: 100%;
+    background-color: black;
+    color: white;
 }
 .card-button{
     width: 40%;
