--- a/WorkShop/React/task-app/src/index.css
+++ b/WorkShop/React/task-app/src/index.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: red;
 }
 
 .container{
