--- a/WorkShop/React/ytb-store/src/components/cart/Cart.css
+++ b/WorkShop/React/ytb-store/src/components/cart/Cart.css
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0;
     right: 0;
+    height: 100vh;
     background-color: #fff;
     padding: 1rem;
     z-index: 100;
